# synthetic

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pypi_release.yml  python-app.yml  python-publish.yml
.history/synthetic/: __init___20230923155740.py  __init___20230923170649.py  __init___20230924160657.py  dstr_20230923155715.py  dstr_20230923160122.py  dstr_20230923163142.py  dstr_20230923164017.py  dstr_20230923164037.py  dstr_20230923165731.py  dstr_20230923170950.py  dstr_20230923171018.py  dstr_20230923172136.py  dstr_20230923172148.py  dstr_20230923173740.py  dstr_20230923173747.py  dstr_20230923174151.py  dstr_20230924232608.py  dstr_20230924232637.py  dstr_20230924233149.py  dstr_20230924234002.py  dstr_20230924234116.py  dstr_20230924234135.py  dstrdict_20230923170516.py  dstrdict_20230923170539.py  pdstr_20230923173418.py  pdstr_20230923173708.py  pdstr_20230923174237.py  pdstr_20230924155811.py  pdstr_20230924161121.py  pdstr_20230924161510.py  pdstr_20230924161856.py  pdstr_20230924162051.py  pdstr_20230924192611.py  pdstr_20230924233434.py  pdstr_20230924233437.py  pdstr_append_result_20230924160345.py  pdstr_append_result_20230924160540.py  pdstr_append_result_20230924160629.py  (+3 more)
synthetic/: __init__.py  dstr.py  dstrdict.py  dynamic_state.py  errors.py  pdstr.py  pdstr_append_result.py  re.py
test/: test_agent.py  test_components.py  test_dllm.py  test_dllm_chain.py  test_dstr.py  test_fake_llm.py  test_functions.py  test_partial_dstr.py  test_prompt_template.py  test_re.py  test_string.py  test_tags.py  test_validators 2.py
(+159 files in other folders)
